# 402Pilot

./: .env.example  .gitignore  IDEATION.md  LICENSE  Makefile  PLAN.md  Project Overview - backup before reward alignment.docx  Project Overview.docx  README.md  neurips_2026.tex  pyproject.toml  references.bib  run_baselines_s1.command  run_full 4.command  run_replication 4.command
docs/: code_structure.md  course_report.tex  dataset_schema.md  experiment_design.md  overleaf_sync.md  paper_outline.md  system_design.md  technical_report.tex
experiments/: main.yaml
figures/: architecture.drawio
logs/: .ablation_metrics_cache 3.json  .ablation_metrics_cache.json  ablation_4metrics_table 3.md  ablation_4metrics_table.md  algorithm_box.md  baseline_240cell_calibration.txt  baselines_s1_analysis.md  literature_review.md  m3f_dual_posterior_design 3.md  m3f_dual_posterior_design.md  m3f_results.md  m3f_walkthrough_annotated.md  notation.md  paper_design_decisions.md  replication_240cell_calibration.txt  replication_comparison.md  reward_audit 3.md  reward_design_rationale 4.md  significance_table.md  tier3_final_analysis.md  tier3_full_calibration.txt
paper/: README.md  checklist.tex  main.tex  neurips_2026.tex  reference_audit.md  references.bib
pilot402/: __init__.py  scenarios 4.py  scenarios.py
scripts/: calibration_report.py  compute_ablation_metrics.py  compute_baseline_diagnostics.py  compute_hyperparam_sensitivity.py  compute_main_table.py  compute_oracle.py  compute_significance.py  compute_sweep_summaries.py  export_viz_data 4.py  export_viz_data.py  prepare_tasks.py  run_ablation_matrix.py  run_baselines_s1 4.py  run_baselines_s1.sh  run_full.sh  run_hyperparam_sensitivity.py  run_path_ab 4.py  run_pregen.py  run_premium_promo 3.py  run_replication.sh  run_s3_promo.py  run_s3_promo_ablation.py  run_s3_promo_v2.py  run_s3_promo_v2_ablation.py  run_scenario_sweep 3.py  run_scenario_sweep.py  run_x402_witness.py  sync_paper_to_overleaf.sh  witness_smoke.sh  x402_witness.sh
sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_problem_formulation.tex  04_layer.tex  05_method.tex  06_evaluation.tex  07_discussion.tex  08_conclusion.tex
tests/: conftest.py  test_backends_lazy_import.py  test_core_config.py  test_core_interfaces.py  test_core_seeds.py  test_core_types.py  test_eval_composite.py  test_eval_judge_cache.py  test_eval_metric_backend.py  test_generator_e2e_mock.py  test_policies_contextual_bts.py  test_policies_contextual_dsts.py  test_policies_fixed.py  test_policies_lincbwk.py  test_policies_padct.py  test_policies_pm_greedy.py  test_policies_posterior 3.py  (+18 more)
(+189 files in other folders)
